# GroundedAI

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Task.md  pyproject.toml
.github/workflows/: ci.yml  eval-gate.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: ask.py  health.py  retrieve.py
backend/app/cache/: redis_cache.py
backend/app/core/: config.py  telemetry.py
backend/app/generation/: citation_validator.py  llm.py  prompt.py
backend/app/reranking/: cross_encoder.py
backend/app/retrieval/: bm25_retriever.py  fusion.py  query_rewriter.py  vector_retriever.py
backend/tests/: test_citation_validator.py  test_fusion.py  test_prompt.py
evaluation/: eval.py  pyproject.toml
evaluation/dataset/: sample_eval.jsonl
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatMessage.tsx  QueryInput.tsx  SystemStatus.tsx
frontend/lib/: api.ts
infra/: docker-compose.yml  init.sql  prometheus.yml
ingestion/: chunker.py  embedder.py  ingest.py  pyproject.toml  storage.py
ingestion/loaders/: html_loader.py  markdown_loader.py  pdf_loader.py
