[project]
name = "production-rag"
version = "0.1.0"
description = "Production-grade Ask My Docs RAG system"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["backend", "ingestion", "evaluation"]

[tool.uv]
dev-dependencies = [
  "pre-commit>=3.7.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "black>=24.4.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "ingestion/tests", "evaluation/tests"]
