[project]
name = "rag-ingestion"
version = "0.1.0"
description = "Document ingestion pipeline — loaders, chunking, embeddings, storage"
requires-python = ">=3.12"
dependencies = [
  # Document processing
  "unstructured[pdf,html,md]==0.16.19",
  "python-magic==0.4.27",
  # Chunking + embeddings
  "llama-index==0.14.21",
  "llama-index-embeddings-openai>=0.3.0",
  "openai>=1.77.0",
  "tiktoken>=0.9.0",
  # Storage
  "qdrant-client==1.14.3",
  "asyncpg==0.31.0",
  "sqlalchemy[asyncio]==2.0.41",
  "boto3==1.38.5",          # S3 / MinIO
  # Utils
  "click==8.2.1",
  "rich==14.0.0",
  "structlog==25.3.0",
  "python-dotenv==1.1.0",
  "tenacity==9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loaders"]
